added communication with driver-service